# gamelibs-xxhash

./: .gitignore  Makefile  meson.build  xxh_x86dispatch.c  xxhash.c  xxhash.h
msvc/: xxhash.vcxproj
